ScoreCalculation implemented